--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+
+lib_deps =
+  https://github.com/umdenes100/ENES100ArduinoLibrary
