--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ framework = arduino
 lib_deps =
   https://github.com/umdenes100/ENES100ArduinoLibrary
   https://github.com/enes100-drop-the-base/arduino_adafruit-drv8871
+  Thread
