Add basic "threads" for sensors

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
   https://github.com/umdenes100/ENES100ArduinoLibrary
   https://github.com/enes100-drop-the-base/arduino_adafruit-drv8871
   Thread
+  TimerOne
